versioned_docs/version-1.10/getting-started.mdx
---
title: Install and Configure 
description: This guide will help you get started by installing and configuring Okteto's Development Environments.
sidebar_label: Install and Configure
id: getting-started
---

import Image from '@theme/Image';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Okteto's Development Environments enable you to automatically deploy your application to a cloud development environment and see all of your code changes the moment you hit 'save' locally on your machine.

These Development Environments work using a combination of the [Okteto platform](index.md), which is used to deploy your application, and [Okteto CLI](cloud/okteto-cli.mdx), which is used to launch the Development Environment. This guide will teach how to get started with remote Development Environments.

## Installing Okteto CLI

Install the Okteto CLI following these steps:

### MacOS / Linux

```console
$ curl https://get.okteto.com -sSfL | sh
```

If you need a specific version you can set the OKTETO_VERSION environment variable:

```console
$ curl https://get.okteto.com -sSfL | OKTETO_VERSION=2.3.3 sh
```

You can also install it via [brew](https://brew.sh/) by running:

```console
$ brew install okteto
```

### Windows

Download https://downloads.okteto.com/cli/stable/okteto.exe and add it to your `$PATH`.

You can also install it via [scoop](https://scoop.sh/) by running:

```console
$ scoop install okteto
```

:::tip

For updating okteto with scoop, you might need to `scoop unhold okteto & scoop update okteto` or `scoop uninstall okteto & scoop install okteto`

:::

### GitHub

Alternatively, you can directly download the binary [from GitHub](https://github.com/okteto/okteto/releases) or build it directly from the source code.

## Configuring Okteto CLI with Okteto

You can launch a remote Development Environment on the [Okteto platform](index.md) or **any** Kubernetes cluster with the Okteto CLI. For this guide, we'll be using Okteto's SaaS platform. 

The first thing you need to do is configure Okteto CLI to use Okteto's platform. To do this, run the command below:

```console
$ okteto context use https://cloud.okteto.com
```

You can confirm that your CLI is configured by running the command below:

```console
$ okteto context list
```
```console
Name                        Namespace             Builder                                 Registry
https://cloud.okteto.com *  cindylopez            tcp://buildkit.cloud.okteto.net:1234    registry.cloud.okteto.net
```

:::note

Okteto offers a fully [self-hosted version](/self-hosted) of our product, which may be more suitable for your organization.

:::

## Define Your Okteto Manifest

For Okteto CLI to know how to launch your Development Environment, it needs an [Okteto manifest](cloud/okteto-cli.mdx#okteto-manifest). This manifest is used to configure for your Development Environment. Okteto CLI will analyze any [existing manifests](cloud/okteto-cli.mdx#deployment-manifests) (Helm, Kubernetes, etc.) in your source code directory and help you write an Okteto manifest for your application.

The Okteto manifest is required in all cases except when a Docker compose file exists and is configured for your application.

If you don't have an Okteto manifest for your application, you can run `okteto init` to generate one. You can then edit the manifest based on your application needs. Learn more about the manifest [here](reference/manifest.mdx).

For this guide we already have the Okteto manifest configured for our application so this step won't be needed.

## Next Steps

In this section we installed Okteto CLI on our machine, configured it to work with Okteto's platform, and provided context for the role the Okteto Manifest plays in deploying a Development Environment.

[Next](using-dev-envs.mdx) we're going to launch our Development Environment and fix a bug in a sample application.
